# freelance-page

./: .env.production  .gitignore  Dockerfile  README.md  azure-pipelines.yml  nginx.conf  package-lock.json  package.json  vue.config.js
backend/: Dockerfile  pyproject.toml
backend/resources/: background.de.json  background.en.json  dataprivacystatement.de.html  dataprivacystatement.en.html  legalnotice.de.html  legalnotice.en.html  profile.de.json  profile.en.json  projects.de.json  projects.en.json
backend/src/: server.py
public/: index.html
src/: App.vue  main.js  theme.scss
src/components/: BackgroundItem.vue  ContactForm.vue  ContentArea.vue  ContentParagraph.vue  ContentTitle.vue  CookieLaw.vue  DataPrivacyStatement.vue  LegalNotice.vue  ProjectReference.vue  ProjectReferenceAlbum.vue  ProjectReferenceCard.vue  ProjectReferenceList.vue  ServiceCard.vue  ServiceCatalog.vue  SkillChart.vue  TheFooter.vue  TheHeader.vue  TheNavbar.vue
src/data/: profile.json  services.json
src/libs/: client.js
src/mixins/: breakpoint.js  scrollTo.js  tracksPageviews.js
src/plugins/: fontawesome.js  router.js  vue-gtag.js  vue-i18n.js  vue-scrollto.js
src/router/: index.js
src/views/: AboutMe.vue  Blog.vue  Contact.vue  Services.vue
