[tool.poetry]
name = "freelance-page-backend"
version = "0.1.0"
description = "Backend for sbischoff.dev website"
authors = ["Bischoff, Silas <contact@sbischoff.dev>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
flask_cors = "^3.0"
flask_yoloapi = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
